[metadata]
name = aoc
version = 0.1.0
author = Letheed
author-email = letheed@outlook.com
summary = Advent of Code
home-page = https://github.com/letheed/aoc/tree/master/python
# https://pypi.python.org/pypi?%3Aaction=list_classifiers check this list for classifiers
classifier =
    Programming Language :: Python :: 3.7

[files]
packages =
    aoc

[entry_points]
console_scripts =
    aoc = aoc.main:main

[flake8]
max-line-length = 100
