cargo-features = ["edition"]

[package]
name = "aoc"
version = "0.1.0"
authors = ["letheed <letheed@outlook.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11"
csv = "1.0"
derive_more = "0.11"
divrem = "0.1"
failure = "0.1"
fnv = "1.0"
json = "0.11"
lazy_static = "1.1.0"
md-5 = "0.7"
mod_exp = "1.0"
nom = "4.0"
num-traits = "0.2"
num-derive = "0.2"
permutohedron = "0.2"
serde = "1.0"
serde_derive = "1.0"
