[package]
name = "aoc"
version = "1.0.0"
authors = ["Letheed <letheed-dev@outlook.com>"]
description = "Advent of Code in Rust"
repository = "https://github.com/letheed/aoc"
readme = "README.md"
license = "MIT"
edition = "2021"
publish = false

[dependencies]
csv = "1.0"
derive_more = "0.99"
divrem = "1.0"
failure = "0.1"
fnv = "1.0"
json = "0.12"
lazy_static = "1.1.0"
md-5 = "0.10"
mod_exp = "1.0"
nom = "4.0"
nu-ansi-term = "0.46"
num-derive = "0.3"
num-traits = "0.2"
permutohedron = "0.2"
serde = "1.0"
serde_derive = "1.0"
